Made the test color inside the What you will get section to make sure there is no color contrast

--- a/css/style.css
+++ b/css/style.css
@@ -531,6 +531,7 @@ h2 {
 
 .summary-panel p {
   margin: 0;
+  color: var(--green-900);
   font-size: 1.12rem;
   line-height: 1.65;
 }
